fix overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,8 @@ img {
   font-size: 1.25rem;
   justify-content: center;
   transition: var(--transition);
-  transform: translateX(100%);
+  /* transform: translateX(100%); */
+  display: none;
   padding-top: 10rem;
   min-height: 30rem;
 }
@@ -142,7 +143,8 @@ img {
 
 /* for JS */
 .show-navbar .nav-menu {
-  transform: translateX(0);
+  display: flex;
+  /* transform: translateX(0); */
   transition: var(--transition);
 }
 .show-navbar .navbar {
